Ajuste na aplicação Product para remover dependências não utilizadas e na IP do ClusteIP dentro da URL do banco de dados Adicionado arquivos YAML para configuração do Kubernetes (Prometheus, Porstgre Exporter, Grafana e Jenkins) Ajuste nos nomes de arquivos YAML para configuração do Kubernetes

--- a/product/kubernetes/postgres-pod.yaml
+++ b/product/kubernetes/postgres-pod.yaml
@@ -1,16 +1,16 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: db-product-pod
+  name: postgres-pod
   labels:
-    app: db-product
+    app: postgres
 spec:
   containers:
-    - name: db-product-pod
+    - name: postgres-pod
       image: postgres
       env:
         - name: POSTGRES_PASSWORD
           value: '123456'
       ports:
-        #- name: db-product-pod
+        #- name: postgres-pod
         - containerPort: 5432
