--- a/product/src/main/resources/application.properties
+++ b/product/src/main/resources/application.properties
@@ -5,7 +5,8 @@ server.port=8086
 #eureka.client.service-url.defaultZone=http://localhost:8762/eureka
 
 #spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.url=jdbc:postgresql://postgres:5432/postgres
+#spring.datasource.url=jdbc:postgresql://postgres:5432/postgres
+spring.datasource.url=jdbc:postgresql://10.111.238.117:5432/postgres
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
