--- a/product/kubernetes/product-deployment.yaml
+++ b/product/kubernetes/product-deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: product-deployment
 spec:
-  replicas: 4
+  replicas: 1
   selector:
     matchLabels:
       app: product
@@ -15,4 +15,18 @@ spec:
     spec:
       containers:
         - name: product-app
-          image: rodrigofbmattos/product-app:0.1
+          image: rodrigofbmattos/product-app:0.3
+#          livenessProbe:
+#            httpGet:
+#              port: 8086
+#              path: /run/desktop/mnt/host/c/kubernetes/probe/liveness
+#            initialDelaySeconds: 50
+#            periodSeconds: 10
+#            failureThreshold: 3
+#          readinessProbe:
+#            httpGet:
+#              port: 8086
+#              path: /run/desktop/mnt/host/c/kubernetes/probe/readiness
+#            initialDelaySeconds: 50
+#            periodSeconds: 10
+#            failureThreshold: 3
