--- a/product/kubernetes/product-nodeport-service.yaml
+++ b/product/kubernetes/product-nodeport-service.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: product-deployment-nodeport-service
+  name: product-nodeport-service
 spec:
   type: NodePort
   selector:
     app: product
   ports:
     - protocol: TCP
-      port: 8070
-      targetPort: 8070
+      port: 8086
+      #targetPort: 8086
       nodePort: 30010
