--- a/product/kubernetes/product-deployment.yaml
+++ b/product/kubernetes/product-deployment.yaml
@@ -16,17 +16,17 @@ spec:
       containers:
         - name: product-app
           image: rodrigofbmattos/product-app:0.3
-#          livenessProbe:
-#            httpGet:
-#              port: 8086
-#              path: /run/desktop/mnt/host/c/kubernetes/probe/liveness
-#            initialDelaySeconds: 50
-#            periodSeconds: 10
-#            failureThreshold: 3
-#          readinessProbe:
-#            httpGet:
-#              port: 8086
-#              path: /run/desktop/mnt/host/c/kubernetes/probe/readiness
-#            initialDelaySeconds: 50
-#            periodSeconds: 10
-#            failureThreshold: 3
+          livenessProbe:
+            httpGet:
+              port: 8086
+              path: /run/desktop/mnt/host/c/kubernetes/probe/liveness
+            initialDelaySeconds: 50
+            periodSeconds: 10
+            failureThreshold: 3
+          readinessProbe:
+            httpGet:
+              port: 8086
+              path: /run/desktop/mnt/host/c/kubernetes/probe/readiness
+            initialDelaySeconds: 50
+            periodSeconds: 10
+            failureThreshold: 3
