Adicionado arquivos para testes com JMeter dentro do cluster Removido arquivo do Prometheus não utilizável Ajuste geral no hostPath do arquivo do Pod do Jenkins

--- a/product/kubernetes/jenkins-pod.yaml
+++ b/product/kubernetes/jenkins-pod.yaml
@@ -20,4 +20,4 @@ spec:
     - name: jenkins-data-volume
       emptyDir: { }
       #hostPath:
-        #path: /prometheus-data
+        #path: /your/home
